fixed minor layout issues with mob

--- a/src/scss/_controls.scss
+++ b/src/scss/_controls.scss
@@ -15,6 +15,8 @@
   color: var(--clr-primary);
   background-color: transparent;
   border: none;
+  margin: 0;
+  padding: 0;
 }
 
 .pick-key select {
