--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,9 +1,9 @@
 .ear-trainer-footer {
   max-width: var(--max-width);
-  margin: clamp(0.6em, 3vh, 1.5em) auto 0 auto;
+  margin: clamp(0.7em, 3vh, 1.5em) auto 0 auto;
   display: flex;
 
-  align-items: center;
+  align-items: flex-start;
 }
 
 .ear-trainer-footer-btn {
@@ -33,7 +33,7 @@
 }
 
 .settings-btn {
-  z-index: 900;
+  z-index: 800;
 }
 
 .score {
